--- a/templates/place/new.html.twig
+++ b/templates/place/new.html.twig
@@ -6,7 +6,7 @@
 
 
     <div class="container">
-        <h1>Création d'un lieu</h1>
+        <h1 class="my-4">Création d'un lieu</h1>
 
         {{ form_start(form) }}
 
